force-app/main/default/objects/Account_Segment_Owner_Mapping__mdt/Account_Segment_Owner_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Account Segment Owner Mapping</label>
    <pluralLabel>Account Segment Owner Mappings</pluralLabel>
</CustomObject>