force-app/main/default/objects/Account_Segment_Owner_Mapping__mdt/fields/Account_API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_API_Field_Name__c</fullName>
    <label>Account API Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>