force-app/main/default/objects/Account_Segment_Owner_Mapping__mdt/fields/Submission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Submission_Reason__c</fullName>
    <label>Submission Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>