force-app/main/default/objects/Account_Segment_Owner_Mapping__mdt/fields/Text_to_Present__c.field-meta.xml
<CustomField>
    <fullName>Text_to_Present__c</fullName>
    <label>Text to Present</label>
    <type>TextArea</type>
</CustomField>